maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:30: error: class Array takes type parameters
def Numerotation(T:Array){
                   ^JediEscaper:30: error: class Array takes type parameters
def Numerotation(T:Array){
                   ^