maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var BiscuitCoord= new Array[Int](2);
  BiscuitCoord = DetectBiscuit();
  Numerotation(BiscuitCoord)
}


/* étapes:
1, détecter le Baggle
2, numéroter les cases jusqu'au buggle
3, suivre la numérotation */


def DetectBiscuit():Array[Int]={
  for (x<-0 to getMondeLargeur()-1){
    for (y<-0 to getMondeLargeur()-1){
      if (aBiscuit(x,y)){
        var Coord = new Array[Int](2)
        Coord(0)=x
        Coord(1)=y
        return Coord;
      }
    }
  }
  var Coord = new Array[Int](2)
  return Coord
}

def Numerotation(T:Array){
  var BiscuitX = T(0);
  var BiscuitY = T(1);
  setIndication(BiscuitX, BiscuitY, '0')
}